# Vulkan20260205

./: .gitignore  ALPHA_REVIEW_CHECKLIST.txt  CMakeLists.txt  ContinueHere.txt  GPU_CULLING_IMPLEMENTATION.txt  GPU_PIPELINE_CLEANUP.txt  LOADING_OPTIMIZATIONS.txt  PORTABLE_SETUP.md  README.md  SETUP.md  build_log.txt  build_output.txt  imgui.ini  setup.sh  vcpkg.json
alpha_review/: README.txt  progress.txt  questions.txt
config/: README.md  config.json  default.json  imgui_layout.ini
docs/: CLEANUP_PROGRESS.txt  GITHUB_PUBLISH.md  README.md  ROADMAP.md  architecture-evolution.md  architecture.md  engine-design.md  getting-started.md  instancing-architecture.md  plan-editor-and-scene.md  plan-loading-and-managers.md  plan-rendering-and-materials.md  shader-pbr-requirements.md  troubleshooting.md
docs/future-ideas/: README.md  animation-skinning-roadmap.md  editor-roadmap.md  indirect-buffers.md
docs/guidelines/: coding-guidelines.md
docs/vulkan/: pbr-references.md  swapchain-rebuild-cases.md  tutorial-order.md  validation-layers.md  version-support.md
include/: vulkan_app.h  vulkan_utils.h
levels/default/: level.json
levels/demo/: level.json  level_backup.json
levels/helmet_stress/: level.json
levels/mirror_test/: level.json
levels/model_defs_demo/: level.json
models/: README.md
scenes/: default.json
scripts/linux/: build.sh  check_dependencies.sh  clean.sh  compile_shaders.sh  run_alpha.sh  setup_linux.sh
scripts/macos/: compile_shaders.sh  setup_macos.sh
scripts/windows/: build.bat  check_dependencies.bat  clean.bat  compile_shaders.bat  run_alpha.bat  setup_windows.bat
shaders/: README.md  SHADER_LIST.md  vert.vert
shaders/source/: debug_line.frag  debug_line.vert  frag.frag  frag.spv  frag_alt.frag  frag_untextured.frag  gpu_cull.comp  time_demo.frag  time_demo.vert  vert.vert
src/: main.cpp  vulkan_app.cpp  vulkan_utils.cpp
src/app/: editor_app.cpp  editor_app.h  runtime_app.cpp  runtime_app.h  vulkan_app.cpp  vulkan_app.h
src/camera/: camera.cpp  camera.h  camera_controller.h
src/config/: config_loader.cpp  config_loader.h  vulkan_config.cpp  vulkan_config.h
src/core/: camera_component.h  component.h  core.h  engine.cpp  engine.h  frame_context.cpp  frame_context.h  gameobject.h  light_component.h  light_debug_renderer.cpp  light_debug_renderer.h  light_manager.cpp  light_manager.h  physics_component.h  renderer_component.h  scene_new.cpp  scene_new.h  script_component.h  subsystem.h  transform.h
src/editor/: editor_layer.cpp  editor_layer.h
src/loaders/: gltf_loader.cpp  gltf_loader.h  gltf_mesh_utils.cpp  gltf_mesh_utils.h  procedural_mesh_factory.cpp  procedural_mesh_factory.h
src/managers/: README.md  descriptor_pool_manager.cpp  descriptor_pool_manager.h  descriptor_set_layout_manager.cpp  descriptor_set_layout_manager.h  managers.h  material_manager.cpp  material_manager.h  mesh_manager.cpp  mesh_manager.h  pipeline_manager.cpp  pipeline_manager.h  resource_cleanup_manager.cpp  resource_cleanup_manager.h  scene_manager.cpp  scene_manager.h  texture_manager.cpp  texture_manager.h
src/render/: batched_draw_list.cpp  batched_draw_list.h  descriptor_cache.cpp  descriptor_cache.h  gpu_buffer.cpp  gpu_buffer.h  gpu_culler.cpp  gpu_culler.h  instance_types.h  render_context.h  render_list_builder.cpp  render_list_builder.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  static_batch_manager.cpp  static_batch_manager.h  tiered_instance_manager.cpp  tiered_instance_manager.h  viewport_config.h  viewport_manager.cpp  viewport_manager.h
src/runtime/: main_menu.cpp  main_menu.h  runtime_overlay.cpp  runtime_overlay.h
src/scene/: level_selector.cpp  level_selector.h  object.h  scene.h  scene_unified.cpp  scene_unified.h  stress_test_generator.cpp  stress_test_generator.h
src/thread/: job_queue.cpp  job_queue.h  resource_manager_thread.cpp  resource_manager_thread.h
src/ui/: imgui_base.cpp  imgui_base.h
src/vulkan/: descriptor_bindings.h  vulkan_command_buffers.cpp  vulkan_command_buffers.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_depth_image.cpp  vulkan_depth_image.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffers.cpp  vulkan_framebuffers.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_shader_manager.cpp  vulkan_shader_manager.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_sync.cpp  vulkan_sync.h  vulkan_types.h  vulkan_utils.cpp  vulkan_utils.h
src/window/: window.cpp  window.h
